# audio-py

./: README.md  pyproject.toml
generator/: engine.py  gui.py  main.py
player/: REFACTOR_PLAN.md  __init__.py  appState.py  audioBuffer.py  audioTrack.py  commandUtil.py  controller.py  engine.py  fileSection.py  gui.py  ipc_commands.txt  loadWorker.py  main.py  mp3Loader.py  multiprocess_host.py  notes.txt  playbackSection.py  player.py  rubberbandStretcher.py  rubberband_demo.py  speedPitchSection.py  state.py  tempoDetector.py  utils.py  waveFormSection.py
player/components/: __init__.py  file.py  label_value.py  stretch_controls.py  track.py  waveform.py
player/sources/: audio_source.py  raw_data_source.py  resample_source.py  stretched_source.py
player_redo/: audioTrack.py  engine.py  fileSection.py  gui.py  ipc_commands.txt  lerpStretcher.py  multiprocess_host.py  nearestNeighborStretcher.py  notes.txt  playbackSection.py  stftStretcher.py  waveFormSection.py  waveformUtil.py
rubberband_exp/: audio_source.py  main.py  pitch.py  raw_data_source.py  resample_source.py  stretched_source.py  vibe.py
