[project]
name = "audio-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pyaudio",
    "PySide6",
    "rubberband @ file:///Users/jack/Documents/rband/py",
    "scipy>=1.10",
    "soundfile>=0.13.1",
    "stftpitchshift>=2.0",
]
